# xi-launcher

./: README.md  dprint.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx  bindings.ts  index.tsx  updater.ts  util.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: ashita_base.ini
src-tauri/src/: ashita.rs  check_game.rs  commands.rs  file_download.rs  game.rs  lib.rs  main.rs  state.rs  task_manager.rs  util.rs  windower.rs
src-tauri/src/config/: launcher.rs  mod.rs  profiles.rs  serde_util.rs
src-tauri/src/tasks/: install.rs  update.rs
src/components/: FileInput.tsx  Footer.tsx  Home.tsx  Installer.tsx  LoginPrompt.tsx  Modal.tsx  ProfileEditor.tsx  ProfileLaunch.tsx  ProfileList.tsx  ResolutionInput.tsx  Setup.tsx  TitleBar.css  TitleBar.tsx  ToggleList.tsx  Updater.tsx
src/store/: index.tsx  profiles.ts  settings.ts
